<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="horizontal">

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_send"
        android:textColor="#A23F7E" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_toStartOf="@+id/buttonMail"
        android:layout_toEndOf="@+id/buttonSend"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#A23F7E"
        android:textSize="24sp" />

    <Button

        android:id="@+id/buttonMail"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_style"
        android:text="@string/mail"
        android:textColor="#A23F7E" />

</RelativeLayout>